Fixed image in summary and aligned text to the left

--- a/WebVisualizations/css/responsive.css
+++ b/WebVisualizations/css/responsive.css
@@ -76,7 +76,7 @@ margin: 0px 15px 20px 15px;
     font-family: 'Lora', serif;
     font-size: 25px;
     font-weight: 500;
-    text-align: center;
+    text-align: left;
     margin: 25px 15px 25px 15px;
 }
 
@@ -89,8 +89,8 @@ margin: 0px 15px 20px 15px;
 .img-float {
     float: left;
     padding: 25px 15px 25px 15px;
-    width: initial;
-    height: initial;
+    width: 383px;
+    height: 285.328px;
 }
 
 @media (max-width: 576px) {
